--- a/install/topic-operator/05-Deployment-strimzi-topic-operator.yaml
+++ b/install/topic-operator/05-Deployment-strimzi-topic-operator.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccountName: strimzi-topic-operator
       containers:
         - name: strimzi-topic-operator
-          image: quay.io/strimzi/operator:0.25.0
+          image: de.icr.io/strimzi-s390x/operator:0.25.0
           args:
           - /opt/strimzi/bin/topic_operator_run.sh
           env:
