--- a/packaging/install/user-operator/05-Deployment-strimzi-user-operator.yaml
+++ b/packaging/install/user-operator/05-Deployment-strimzi-user-operator.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccountName: strimzi-user-operator
       containers:
         - name: strimzi-user-operator
-          image: quay.io/strimzi/operator:0.25.0
+          image: de.icr.io/strimzi-s390x/operator:0.25.0
           args:
           - /opt/strimzi/bin/user_operator_run.sh
           env:
